--- a/package.json
+++ b/package.json
@@ -3,5 +3,180 @@
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1"
-  }
+  },
+  "name": "tdd",
+  "description": "(Test Driven Development)",
+  "version": "1.0.0",
+  "main": ".eslintrc.js",
+  "dependencies": {
+    "acorn": "^8.10.0",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "array-buffer-byte-length": "^1.0.0",
+    "array-includes": "^3.1.7",
+    "array.prototype.findlastindex": "^1.2.3",
+    "array.prototype.flat": "^1.3.2",
+    "array.prototype.flatmap": "^1.3.2",
+    "arraybuffer.prototype.slice": "^1.0.2",
+    "available-typed-arrays": "^1.0.5",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "chalk": "^4.1.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "confusing-browser-globals": "^1.0.11",
+    "cross-spawn": "^7.0.3",
+    "debug": "^4.3.4",
+    "deep-is": "^0.1.4",
+    "define-data-property": "^1.1.0",
+    "define-properties": "^1.2.1",
+    "doctrine": "^3.0.0",
+    "es-abstract": "^1.22.2",
+    "es-set-tostringtag": "^2.0.1",
+    "es-shim-unscopables": "^1.0.0",
+    "es-to-primitive": "^1.2.1",
+    "escape-string-regexp": "^4.0.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-module-utils": "^2.8.0",
+    "eslint-scope": "^7.2.2",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^9.6.1",
+    "esquery": "^1.5.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.15.0",
+    "file-entry-cache": "^6.0.1",
+    "find-up": "^5.0.0",
+    "flat-cache": "^3.1.0",
+    "flatted": "^3.2.9",
+    "for-each": "^0.3.3",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.6",
+    "functions-have-names": "^1.2.3",
+    "get-intrinsic": "^1.2.1",
+    "get-symbol-description": "^1.0.0",
+    "glob": "^7.2.3",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.22.0",
+    "globalthis": "^1.0.3",
+    "gopd": "^1.0.1",
+    "graphemer": "^1.4.0",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "ignore": "^5.2.4",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.5",
+    "is-array-buffer": "^3.0.2",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.13.0",
+    "is-date-object": "^1.0.5",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-negative-zero": "^2.0.2",
+    "is-number-object": "^1.0.7",
+    "is-path-inside": "^3.0.3",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.12",
+    "is-weakref": "^1.0.2",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^1.0.2",
+    "keyv": "^4.5.3",
+    "levn": "^0.4.1",
+    "locate-path": "^6.0.0",
+    "lodash.merge": "^4.6.2",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "object-inspect": "^1.12.3",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.4",
+    "object.entries": "^1.1.7",
+    "object.fromentries": "^2.0.7",
+    "object.groupby": "^1.0.1",
+    "object.values": "^1.1.7",
+    "once": "^1.4.0",
+    "optionator": "^0.9.3",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parent-module": "^1.0.1",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "prelude-ls": "^1.2.1",
+    "punycode": "^2.3.0",
+    "queue-microtask": "^1.2.3",
+    "regexp.prototype.flags": "^1.5.1",
+    "resolve": "^1.22.6",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "safe-array-concat": "^1.0.1",
+    "safe-regex-test": "^1.0.0",
+    "semver": "^6.3.1",
+    "set-function-name": "^2.0.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.4",
+    "string.prototype.trim": "^1.2.8",
+    "string.prototype.trimend": "^1.0.7",
+    "string.prototype.trimstart": "^1.0.7",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "text-table": "^0.2.0",
+    "tsconfig-paths": "^3.14.2",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "typed-array-buffer": "^1.0.0",
+    "typed-array-byte-length": "^1.0.0",
+    "typed-array-byte-offset": "^1.0.0",
+    "typed-array-length": "^1.0.4",
+    "unbox-primitive": "^1.0.2",
+    "uri-js": "^4.4.1",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "which-typed-array": "^1.1.11",
+    "wrappy": "^1.0.2",
+    "yocto-queue": "^0.1.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
