--- a/package.json
+++ b/package.json
@@ -174,7 +174,8 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/** test/** --fix"
   },
   "keywords": [],
   "author": "",
