--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint src/** test/** --fix"
   },
   "keywords": [],
