--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   },
   "name": "tdd",
   "description": "(Test Driven Development)",
