--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "define-data-property": "^1.1.0",
     "define-properties": "^1.2.1",
     "doctrine": "^3.0.0",
+    "dotenv": "^16.3.1",
     "es-abstract": "^1.22.2",
     "es-set-tostringtag": "^2.0.1",
     "es-shim-unscopables": "^1.0.0",
