--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
     "confusing-browser-globals": "^1.0.11",
+    "consign": "^0.1.6",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.4",
     "deep-is": "^0.1.4",
